--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,8 +3,8 @@
         Options -MultiViews -Indexes
     </IfModule>
 
-    RewriteEngine On
-
+    RewriteEngine on
+	
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
@@ -17,5 +17,5 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^ /index.php [L]
 </IfModule>
